# RushHour

./: Agents.py  BoardLoader.py  BoardObjects.py  BoardSolver.py  BoardSolver2.py  CMakeLists.txt  Display.py  Dockerfile  GameBoard.py  Heuristics.py  README.md  TwoPlayerGame.py  experiments.ipynb  experiments.txt  generateExperiments.py  graphplan.py  multi_agents.py  project_proposal.tex  rush_hour_solver.py  util.py
boards/: 21.txt  3_double_lane.txt  40.txt  adv.txt  adv2.txt  adv_2.txt  adv_sample3.txt  sample2.txt  test_board.txt
controllers/: board_solver.py
planning/: __init__.py  action.py  action_layer.py  graph_plan.py  pgparser.py  plan_graph_level.py  proposition.py  proposition_layer.py  rushhour.py  util.py
planning/gp_problem_domain/: 1_domain.txt  1_problem.txt  adv_sample2_domain.txt  adv_sample2_problem.txt  advance_domain.txt  advance_problem.txt  beginner2_domain.txt  beginner2_problem.txt  beginner2_res_domain.txt  beginner2_res_problem.txt  beginner_domain.txt  beginner_problem.txt  intermediate_domain.txt  intermediate_problem.txt  sample1_domain.txt  sample1_problem.txt  sample3_domain.txt  sample3_problem.txt
results/: results copy.csv  results.csv
results/solutions/: 11_astar_blockersCount_solution.txt  (+136 more)
results/solutions copy/: 11_astar_singlePlayer_solution.txt  11_bfs_solution.txt  1_astar_blockersCount_solution.txt  21_random_solution.txt  2_astar_blockersTotalSize_solution.txt  2_astar_stepsToClearPath_solution.txt  2_bfs_solution.txt  39_astar_blockersCount_solution.txt  39_astar_singlePlayer_solution.txt  39_bfs_solution.txt  39_random_solution.txt  40_astar_blockersCount_solution.txt  40_astar_stepsToClearPath_solution.txt  adv_12_alphabeta_blockersTotalSize_randomAdv_nullHeuristic_solution.txt  adv_12_alphabeta_distanceToExit_randomAdv_nullHeuristic_solution.txt  adv_12_alphabeta_singlePlayer_randomAdv_nullHeuristic_solution.txt  adv_12_alphabeta_stepsToClearPath_randomAdv_nullHeuristic_solution.txt  adv_12_alphabeta_twoPlayers_alphabeta_blockersCount_solution.txt  adv_12_alphabeta_twoPlayers_alphabeta_blockersTotalSize_solution.txt  adv_12_alphabeta_twoPlayers_alphabeta_distanceToExit_solution.txt  adv_12_alphabeta_twoPlayers_mcts_nullHeuristic_solution.txt  adv_12_mcts_nullHeuristic_alphabeta_twoPlayers_solution.txt  adv_12_mcts_nullHeuristic_randomAdv_nullHeuristic_solution.txt  adv_12_randomAdv_nullHeuristic_randomAdv_nullHeuristic_solution.txt  adv_1_alphabeta_distanceToExit_randomAdv_nullHeuristic_solution.txt  adv_1_alphabeta_stepsToClearPath_randomAdv_nullHeuristic_solution.txt  adv_1_alphabeta_twoPlayers_alphabeta_blockersCount_solution.txt  adv_1_alphabeta_twoPlayers_alphabeta_blockersTotalSize_solution.txt  adv_1_alphabeta_twoPlayers_alphabeta_nullHeuristic_solution.txt  adv_1_alphabeta_twoPlayers_alphabeta_stepsToClearPath_solution.txt  adv_1_alphabeta_twoPlayers_randomAdv_nullHeuristic_solution.txt  adv_21_alphabeta_blockersCount_randomAdv_nullHeuristic_solution.txt  adv_21_alphabeta_blockersTotalSize_randomAdv_nullHeuristic_solution.txt  adv_21_alphabeta_singlePlayer_randomAdv_nullHeuristic_solution.txt  adv_21_alphabeta_twoPlayers_alphabeta_blockersCount_solution.txt  adv_21_alphabeta_twoPlayers_alphabeta_distanceToExit_solution.txt  adv_21_alphabeta_twoPlayers_alphabeta_singlePlayer_solution.txt  adv_21_alphabeta_twoPlayers_alphabeta_stepsToClearPath_solution.txt  adv_21_alphabeta_twoPlayers_mcts_nullHeuristic_solution.txt  adv_21_alphabeta_twoPlayers_randomAdv_nullHeuristic_solution.txt  (+45 more)
search/: Board.cpp  Board.h  Car.cpp  Car.h  Heuristics.cpp  Heuristics.h  Move.cpp  Move.h  Player.h  SearchAlgorithms.cpp  SearchAlgorithms.h  SearchResult.h  main.cpp
src/: Board.cpp  Heuristics.cpp  Heuristics.h  Move.cpp  Move.h  main.cpp
tests/: tests.cpp
views/: console_view.py
